Add more examples

--- a/tests/dummy/app/components/character.hbs
+++ b/tests/dummy/app/components/character.hbs
@@ -2,6 +2,7 @@
   <div class="id">{{this.id}}</div>
   <div class="name">{{this.name}}</div>
   <div class="title">{{this.title}}</div>
+  <div class="tunic">{{this.tunic}}</div>
   <div class="hearts">{{this.hearts}}</div>
   <div class="level">{{this.level}}</div>
 </div>
