--- a/tests/dummy/app/components/character.hbs
+++ b/tests/dummy/app/components/character.hbs
@@ -1,5 +1,6 @@
 <div class="character" role="button" {{on "click" this.onClick}}>
   <div class="id">{{this.id}}</div>
+  <div class="_id">{{this._id}}</div>
   <div class="name">{{this.name}}</div>
   <div class="title">{{this.title}}</div>
   <div class="tunic">{{this.tunic}}</div>
