fix: call default value getter with proper context

--- a/tests/dummy/app/components/character.hbs
+++ b/tests/dummy/app/components/character.hbs
@@ -3,6 +3,7 @@
   <div class="_id">{{this._id}}</div>
   <div class="name">{{this.name}}</div>
   <div class="title">{{this.title}}</div>
+  <div class="formal-name">{{this.formalName}}</div>
   <div class="tunic">{{this.tunic}}</div>
   <div class="hearts">{{this.hearts}}</div>
   <div class="level">{{this.level}}</div>
