feat: add @forbidExtraArgs decorator
- throws error if unknown arguments are passed (e.g. no corresponding
  @arg in component)
- only extend class in debug mode
- update docs for @@forbidExtraArgs

--- a/tests/dummy/app/templates/application.hbs
+++ b/tests/dummy/app/templates/application.hbs
@@ -3,3 +3,7 @@
 <h2 id="title">ember-arg-types</h2>
 
 <Character @name="link"/>
+<hr />
+<ExtendedCharacter @name="extra" @magic={{true}} @version={{3}} />
+<hr />
+<ExtendedCharacter @name="extra" @version={{1}} />
